# resourceschedule_device_standby

./: README.md  README_ZH.md  bundle.json  standby_service.gni
frameworks/: BUILD.gn
frameworks/include/: istandby_ipc_inteface_code.h  istandby_service.h  istandby_service_subscriber.h  standby_ipc_interface_code.h  standby_service_proxy.h  standby_service_stub.h  standby_service_subscriber_proxy.h
frameworks/src/: standby_service_proxy.cpp  standby_service_stub.cpp  standby_service_subscriber_proxy.cpp
interfaces/innerkits/: BUILD.gn  IStandbyService.idl  libstandby_innerkits.versionscript
interfaces/innerkits/include/: allow_info.h  allow_type.h  resource_request.h  standby_service_client.h  standby_service_proxy.h  standby_service_subscriber_stub.h
interfaces/innerkits/src/: allow_info.cpp  allow_type.cpp  resource_request.cpp  standby_service_client.cpp  standby_service_proxy.cpp  standby_service_subscriber_stub.cpp
interfaces/innerkits/test/unittest/: BUILD.gn  mock_standby_client_unit_test.cpp  standby_client_unit_test.cpp
interfaces/innerkits/test/unittest/mock/: mock_sa_service.cpp
interfaces/innerkits/test/unittest/mock/include/: mock_sa_service.h
interfaces/kits/: BUILD.gn
interfaces/kits/ani/: BUILD.gn
interfaces/kits/ani/idl/: ohos.resourceschedule.deviceStandby.taihe
interfaces/kits/ani/src/: ani_constructor.cpp  ohos.deviceStandby.impl.cpp
interfaces/kits/napi/src/: common.cpp  init.cpp  standby_napi_module.cpp
patches/: component.patch  patches.json  workschedule.patch
plugins/: BUILD.gn  libstandby_plugin.versionscript
plugins/ext/include/: base_state.h  ibase_strategy.h  iconstraint_monitor.h  ilistener_manager_adapter.h  istate_manager_adapter.h  istrategy_manager_adapter.h  standby_messsage.h
plugins/ext/src/: base_state.cpp  istate_manager_adapter.cpp
plugins/extend_constraints/include/: motion_sensor_monitor.h
plugins/extend_constraints/src/: charge_state_monitor.cpp  constraint_manager_adapter.cpp  motion_sensor_monitor.cpp
plugins/message_listener/include/: background_task_listener.h  common_event_listener.h  input_manager_listener.h  listener_manager_adapter.h
plugins/message_listener/src/: background_task_listener.cpp  common_event_listener.cpp  input_manager_listener.cpp  listener_manager_adapter.cpp
plugins/standby_state/include/: state_manager_adapter.h
plugins/standby_state/src/: dark_state.cpp  export_plugin.cpp  maintenance_state.cpp  nap_state.cpp  sleep_state.cpp  state_manager_adapter.cpp  working_state.cpp
plugins/strategy/include/: base_network_strategy.h  network_strategy.h  running_lock_strategy.h  strategy_manager_adapter.h  timer_strategy.h
plugins/strategy/src/: base_network_strategy.cpp  network_strategy.cpp  running_lock_strategy.cpp  strategy_manager_adapter.cpp  timer_strategy.cpp
plugins/test/fuzztest/: BUILD.gn
plugins/test/fuzztest/statemanageradapter_fuzzer/: BUILD.gn  statemanageradapter_fuzzer.cpp  statemanageradapter_fuzzer.h
plugins/test/unittest/: BUILD.gn  charge_state_monitor_test.cpp  constraint_manager_adapter_test.cpp  motion_sensor_monitor_test.cpp  standby_plugin_strategy_test.cpp  standby_plugin_unit_test.cpp
sa_profile/: 1914.json  1914.xml
services/: BUILD.gn  libstandby_service.versionscript
services/common/include/: background_task_helper.h  device_standby_switch.h  time_provider.h  timed_task.h
services/common/src/: background_task_helper.cpp  device_standby_switch.cpp  time_provider.cpp  timed_task.cpp
services/core/include/: ability_manager_helper.h  allow_record.h  app_mgr_helper.h  app_state_observer.h  bundle_manager_helper.h  common_event_observer.h  standby_service.h  standby_service_impl.h
services/core/src/: ability_manager_helper.cpp  allow_record.cpp  app_mgr_helper.cpp  app_state_observer.cpp  bundle_manager_helper.cpp  common_event_observer.cpp  standby_service.cpp  standby_service_impl.cpp
services/notification/include/: standby_state_subscriber.h
services/notification/src/: standby_state_subscriber.cpp
services/test/fuzztest/: BUILD.gn
services/test/fuzztest/devicestandby_fuzzer/: BUILD.gn  devicestandby_fuzzer.cpp  devicestandby_fuzzer.h
services/test/unittest/: BUILD.gn  allow_record_unit_test.cpp  mock_standby_service_unit_test.cpp  standby_helper_unit_test.cpp  standby_service_unit_test.cpp  standby_utils_unit_test.cpp
services/test/unittest/mock/: mock_common_event.cpp  mock_connect.cpp  mock_helper.cpp  mock_ipc.cpp  mock_standby_helper_unit_test.cpp
services/test/unittest/mock/include/: ibundle_manager_helper.h  ibundle_manager_helper_mock.h  mock_bundle_manager_helper.h  mock_common_event.h  mock_ipc.h
utils/common/: BUILD.gn
utils/common/include/: common_constant.h  ipc_util.h  report_data_utils.h  res_type.h  single_instance.h  standby_hitrace_chain.h  standby_res_data.h  standby_service_errors.h  standby_service_log.h
utils/common/src/: common_constant.cpp  report_data_utils.cpp  standby_hitrace_chain.cpp
utils/policy/: BUILD.gn  libstandby_utils_policy.versionscript
utils/policy/configs/: device_standby_config.json
utils/policy/include/: json_utils.h  standby_config_manager.h
utils/policy/src/: json_utils.cpp  standby_config_manager.cpp
utils/test/fuzztest/: BUILD.gn
utils/test/fuzztest/configmanager_fuzzer/: BUILD.gn  configmanager_fuzzer.cpp  configmanager_fuzzer.h
