# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/resourceschedule/device_standby/standby_service.gni")

config("standby_fwk_public_config") {
  include_dirs = [
    "include",
    "${standby_innerkits_path}/include",
  ]
}

ohos_shared_library("standby_fwk") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "${standby_innerkits_path}/src/allow_info.cpp",
    "${standby_innerkits_path}/src/resource_request.cpp",
    "src/standby_service_subscriber_proxy.cpp",
  ]

  public_configs = [ ":standby_fwk_public_config" ]

  public_deps = [
    "${standby_innerkits_path}:device_standby_stub",
    "${standby_utils_common_path}:standby_utils_common",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
  public_external_deps = [ "resource_schedule_service:resschedsvc" ]

  subsystem_name = "resourceschedule"
  part_name = "${standby_service_part_name}"
}
