# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/resourceschedule/device_standby/standby_service.gni")

config("standby_innerkits_public_config") {
  include_dirs = [
    "include",
    "${standby_service_frameworks_path}/include",
    "${standby_utils_common_path}/include",
  ]
}

ohos_shared_library("standby_innerkits") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "src/allow_info.cpp",
    "src/allow_type.cpp",
    "src/resourcce_request.cpp",
    "src/standby_service_client.cpp",
    "src/standby_service_proxy.cpp",
    "src/standby_service_subscriber_stub.cpp",
  ]

  public_configs = [ ":standby_innerkits_public_config" ]

  deps = [
    "${standby_service_frameworks_path}:standby_fwk",
    "${standby_utils_common_path}:standby_utils_common",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "samgr:samgr_proxy",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "resourceschedule"
  part_name = "${standby_service_part_name}"

  version_script = "libstandby_innerkits.versionscript"
}
