# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/resourceschedule/device_standby/standby_service.gni")

cflags = []

config("standby_napi_public_config") {
  include_dirs = [ "napi/include" ]
}

ohos_shared_library("devicestandby") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "napi/src/common.cpp",
    "napi/src/init.cpp",
    "napi/src/standby_napi_module.cpp",
  ]

  public_configs = [ ":standby_napi_public_config" ]

  deps = [
    "${standby_interfaces_path}/innerkits:standby_innerkits",
    "${standby_service_frameworks_path}:standby_fwk",
  ]

  external_deps = [
    "ability_runtime:ability_context_native",
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_base_context",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]
  relative_install_dir = "module/resourceschedule"
  subsystem_name = "resourceschedule"
  part_name = "${standby_service_part_name}"
}
