# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/resourceschedule/device_standby/standby_service.gni")

config("standby_utils_common_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("standby_utils_common") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [ "src/common_constant.cpp" ]

  public_configs = [ ":standby_utils_common_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  defines = []
  if (enable_standby_configpolicy) {
    external_deps += [ "config_policy:configpolicy_util" ]
    defines += [ "STANDBY_CONFIG_POLICY_ENABLE" ]
  }

  subsystem_name = "resourceschedule"
  part_name = "${standby_service_part_name}"
}
