# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//build/ohos/taihe_idl/taihe.gni")
import("//foundation/resourceschedule/device_standby/standby_service.gni")

taihe_generated_file_path = "${taihe_file_path}/out/${subsystem_name}/${standby_service_part_name}"

copy_taihe_idl("copy_device_standby") {
  sources = [
    "idl/ohos.resourceschedule.deviceStandby.taihe",
  ]
}

ohos_taihe("run_taihe") {
  taihe_generated_file_path = "${taihe_generated_file_path}"
  deps = [ ":copy_device_standby" ]
  outputs = [
    "${taihe_generated_file_path}/src/ohos.resourceschedule.deviceStandby.ani.cpp",
    "${taihe_generated_file_path}/src/ohos.resourceschedule.deviceStandby.abi.c",
  ]
}

taihe_shared_library("device_standby_ani") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  taihe_generated_file_path = "${taihe_generated_file_path}"
  subsystem_name = "${subsystem_name}"
  part_name = "${standby_service_part_name}"

  include_dirs = []
  sources = get_target_outputs(":run_taihe")
  sources += [
    "src/ani_constructor.cpp",
    "src/ohos.deviceStandby.impl.cpp",
  ]

  deps = [
    ":run_taihe",
    ""${standby_interfaces_path}/innerkits:standby_innerkits",
    "${standby_service_frameworks_path}:standby_fwk",
  ]

  external_deps = [
    "ability_runtime:ability_context_native",
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_base_context",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "resource_schedule_service:resschedsvc",
    "samgr:samgr_proxy",
  ]
}

generate_static_abc("device_standby_abc") {
  base_url = "${taihe_generated_file_path}"
  files = [ "${taihe_generated_file_path}/@ohos.resourceschedule.deviceStandby.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/device_standby_abc.abc"
  dependencies = [ ":run_taihe" ]
}

ohos_prebuilt_etc("device_standby") {
  source = "${target_out_dir}/reminder_agent_manager_abc.abc"
  module_install_dir = "framework"
  part_name = "${standby_service_part_name}"
  subsystem_name = "${subsystem_name}"
  deps = [
    ":device_standby_abc",
  ]
}